--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "@reduxjs/toolkit": "2.2.6",
     "@testing-library/jest-dom": "5.17.0",
     "@testing-library/react": "13.4.0",
     "@testing-library/user-event": "13.5.0",
@@ -11,19 +10,12 @@
     "@types/node": "16.18.101",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
-    "axios": "0.27.2",
-    "dotenv": "16.4.5",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-prettier": "5.0.0",
     "express": "4.18.2",
     "prettier": "3.0.3",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-redux": "9.1.2",
-    "react-router-dom": "6.24.0",
     "react-scripts": "5.0.1",
-    "redux": "5.0.1",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
   },
@@ -57,7 +49,15 @@
     ]
   },
   "dependencies": {
-    "react-select": "^5.8.0",
-    "spinners-react": "^1.0.7"
+    "react-select": "5.8.0",
+    "spinners-react": "1.0.7",
+    "redux": "5.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-redux": "9.1.2",
+    "react-router-dom": "6.24.0",
+    "@reduxjs/toolkit": "2.2.6",
+    "axios": "0.27.2",
+    "dotenv": "16.4.5"
   }
 }
